# bot

./: .gitignore  Cargo.toml  DESIGN.md  Dockerfile  INSTALL.md  README.md  blocknotify.example.sh  config.base.example  docker-compose.yml  sqlx-data.json  walletnotify.example.sh
.sqlx/: query-023bc52002402454ada5f3683b310046ac489b5407b5bf8db608ad3ea103f4e5.json  query-06f77bef128012f3106d4b9eb3b27a1266d5066ee9365d97e7d6ef74f78ecb42.json  query-099b67ad64803ef2f48120818fe3e228ce6d58e484b766267f0970ec60e34263.json  query-0f200afcdcbd4068a0df43ed9bf7eabb0863fb6afeb5659a96d443d80080f8b2.json  query-1129dcc71b75e2149f27c32d1b5f771c99e723de6525f22ab6e6291a41fd0f7e.json  query-14c026e638cd36cff8b68ef0a1f9f9368ed63d4722041d3fd4360c146d266ebc.json  query-14f5709e6624b1f3048c8a0a2db5df0bb01b34ea3c4a4242b24ed8bd4a7d4d26.json  query-1c96dbb6628d8bce3a83b32d65fefe14fe1b62581615b587fcb05a91e2aede76.json  query-200d7df25bbd9d5297a984b24ceec401dc7e8628001a526369d3763482f6765d.json  query-212148fea149534bc3e7d438695bf2f496434aff0bcf9b171d3c17f2f47972b8.json  query-247d765e9acb9efc4fc77b53c13d397decd8256c345488c96dbf890de9f2f28e.json  query-2a701d7bee9dd2bcb8e4da41e89dfe4aed4a4c7864e7a90f77a14807d16b5abb.json  query-301b94e2183c15c5cba501ee4d88c35ad06eebf9715eda4e26a07a5f60dcefb3.json  query-30e3a9a82ef9db4589980732a691f3e36376025491307194bb2c56de43fd29c4.json  query-3427e79ae68620e71af060fb3bf953ead2620a3cb22852c8940ed2aafe2a3325.json  query-384f845b2d5460a8f8eb898022f5149007e9578f9fed794df9bc442e1ef9be45.json  query-3986ccb56a9350548e5b03dc0fab915103e146974ebfa48358cf9d842f5ca939.json  query-3ba0f505b68bfb7dc83a5143268fc1fa556fe65056dceb5a03af79ddc29a9c9b.json  query-3ded6d66366dfc8aac0c92f860f230be0be640406940c7ca0fbb5fdabde77146.json  query-3f3fad17dd085e26f4fa5170a9084d26cce3e30c606651e03ee80f9727d30f99.json  query-42564d0461a484d8e80e7815fbb2f3909ee4b5504a7bfb4f769ea5291233c6ea.json  query-45a38d77f6781584c252c37714cba89ce8058849855ee1b98bb784c79648ca99.json  query-49d4bedb6501c0b40bf237849867e53cb1a8726f3a3e978175073df3ba92db75.json  query-54cddb8a236e88a25f0c45d0753e1ce74521b50c18e5d2737ed990562fd6ba89.json  query-579766da37d44cef07109cce168c99a11ebefcc9a60fd20b846c7403a8aa48e1.json  query-5ebf45d92b3a7f5cf2e2ea7ae8d6fc5e2918f090cbce2eb4b49dc2691be8f40c.json  query-6301ed56e7c100586aeed5fce4a449852b6d837cde7dcc4f42e984463f5a8b93.json  query-63def600bdcf738d595bd767cb7d38fb5d7a0f3cd6e8cbba21f06a92fbb2a8dc.json  query-6ace687e2000575a1ae90c28c03e160bb3bcb82c02eca6ecdd3a9a58a040f43b.json  query-722690fcab368f1c2ecba80ca262ecb06a7c1bf63e12647030608008b29ea44a.json  query-732883a85e73dd4a6c891ffb11db1c85f5c68f79cf6ddada7f5f366bfb59d7c8.json  query-737b6f434fed1d3561cd24aac207345c482fcab06b5afe217e5f3fd4df3b59ed.json  query-77d8a9da9bd55f8e42c00271affbf86af215e6e2716290272795a1734966cf3a.json  query-7cd95f20b68a82f0be9b37544cd98f95eb69f1d3349802eebd61a6423f948a75.json  query-88c6f0c4581862cd0fe0432be0441b131f23493ebd0b5ce62cda5f34e2503c90.json  query-8c9d44a51d9a22cb3f92257cc005d8f104562824ca518ab616be1a3a4a96baba.json  query-8e182890fd7a46993e26c3d01c0906ad9bf0d3babcc9d3259f6fffe4d9d71f88.json  query-91d57a836f5d609e2ba70b00d4c1348fff91eff8c903a1e36ad8bee5c852cc9e.json  query-98d1b1cd5cb3c313c9eaf2b24f4f4c950820e58b52d0451d3e9d5e6ab5d4d773.json  query-a2850f8e9377bc9097817497eb424ecfe09ae0e51da21eb8431c6e1cf629f519.json  (+26 more)
migrations/: 20221213150309_add_notifications_column.sql  20221214125637_alter_tips_table.sql  20221214131155_alter_tips_table.sql  20221222100046_alter_tips_table.sql  20230119114721_create_opid_table.sql  20230201091002_address_table.sql  20230201135552_remove_address_column_from_discord_users.sql  20230224103914_create_reactdrop_fut_table.sql  20230224105642_drop_reactdrop_fut.sql  20230705085614_emoji_change_type.sql  20230706045705_emoji_author.sql  20230706045916_emoji_author_type.sql  20241125185405_refactor_v2.sql  20250910090000_baseline.up.sql  20251009095129_multi-asset-support.down.sql  20251009095129_multi-asset-support.up.sql  20251012072907_remove-discord-users-table.down.sql  20251012072907_remove-discord-users-table.up.sql  20251017172018_add-amount-to-transactions.down.sql  20251017172018_add-amount-to-transactions.up.sql  20251019181951_make-transactions-not-null.down.sql  (+2 more)
src/: config.rs  configuration.rs  (+6 more)
(+40 files in other folders)
