[package]
edition = "2024"
name = "verusbot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
charming = { version = "0.6.0", features = ["ssr", "ssr-raster"] }
chrono = { version = "0.4.42", features = ["rkyv"] }
config = { version = "0.15.18", default-features = false, features = ["toml"] }
poise = { features = ["cache"], version = "0.6.1" }
emojis = "0.7.2"
fancy-regex = "0.16.2"
fast_qr = { version = "0.13.1", features = ["image"] }
futures = "0.3.31"
num-traits = "0.2.15"
reqwest = { version = "0.12.23", features = ["json"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "net"] }
thousands = "0.2.0"
tmq = { version = "0.5.0" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "std",
    "json",
] }
tracing-appender = "0.2.2"
uuid = { version = "1.18.1", features = ["v4"] }
vrsc = "0.0.1"
vrsc-rpc = { git = "https://github.com/jorian/rust-vrsc-rpc" }
tokio-graceful-shutdown = "0.19.0"

[dependencies.sqlx]
default-features = false
features = [
    "postgres",
    "macros",
    "bigdecimal",
    "migrate",
    "uuid",
    "chrono",
    "runtime-tokio-rustls",
]
version = "0.8.6"
